refine flow runtime tool routing and test guards